# sample-rust-api-service

./: .env  Cargo.toml  Dockerfile  README.md  helmfile.yaml
helm/: Chart.yaml
helm/templates/: rust-service-ingress.yaml  service.yaml
helm_local/: values.yaml
helm_local/templates/: configMap.yaml  deployment.yaml
manifest/: configMap.yaml  deployment.yaml  rust-service-ingress.yaml  service.yaml
src/: handlers.rs  main.rs  models.rs  routes.rs  state.rs
