[package]
name = "sample-rust-api-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Logging
env_logger = "0.8.3"
log = "0.4.0"
#Actix web framework and run-time
actix-web = "4.0.0"
actix-rt = "1.1.1"
tokio = { version = "1", features = ["full"] }
#Environment variable access libraries
dotenv = "0.15.0"
# Data serialization library
serde = { version = "1.0.110", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio-compat-02 = "0.2.0"